@@ -112,6 +112,8 @@ Release 0.4.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-378 Found a few source files missing Apache headers (gates)
+
   HCAT-377 Recent changes broke releaseaudit target (gates)
 
   HCAT-367 Pig writes data but partition information isn't getting updated (rohini via gates)
